# ontology-hydra

./: .env.example  .gitignore  README.md  TODO.md  demo.py  demo2.py  kg.json  mockingbird_vis.js  nash.py  output_vis.js  pyproject.toml  sample-discussion.json  sample-population.json  sample.json  temp.sh  test.py  test_run_metrics.py
MedExQA/: README.md
artifacts/: cqs-ontology_gpt-4o-mini copy.html  cqs-ontology_gpt-4o-mini.html  cqs-ontology_gpt-4o-mini.txt  fixed_ontology.html  fixed_ontology.json  fixed_ontology_transformation_history.json  kg.deepseek-r1-distill-qwen-32b-q4_k_m.html  kg.domain.gpt-4o-mini.html  kg.gpt-4o-mini.html  kg.json  ontology.json  test.html  triplet_extraction.deepseek-r1-distill-qwen-32b-q4_k_m.txt  triplet_extraction.gpt-4o-mini.txt  triplet_extraction.gpt-4o-mini_domain.txt
eval/: .gitignore  README.md  config.json  config_biomedical_engineer.json  config_biomedical_engineer_kg_only.json  config_clinical_laboratory_scientist.json  config_clinical_laboratory_scientist_kg_only.json  config_clinical_psychologist.json  config_clinical_psychologist_kg_only.json  config_gemini-2.5-flash.json  config_gemini-2.5-pro.json  config_gpt-4.1-mini.json  config_gpt-4.1-nano.json  config_gpt-4.1.json  config_gpt-4o-mini.json  config_gpt-4o.json  config_o3.json  config_o4-mini.json  config_occupational_therapist.json  config_occupational_therapist_kg_only.json  config_speech_pathologist.json  config_speech_pathologist_kg_only.json  test_config.json
notebooks/: KnowledgeGraph.ipynb  Test.ipynb
output/: kg.html  ontology_kg.html
src/: utils.py
(+952 files in other folders)
