[project]
name = "ontopipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = ["neo4j>=5.28.1", "symbolicai"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
symbolicai = { git = "https://github.com/ExtensityAI/symbolicai.git", rev = "f46a288fc115933cc4c934d856e24b0616fc2130" } # fixed commit hash, update if needed

[tool.uv.workspace]
members = ["packages/eval"]
