[project]
name = "ontopipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0,<3.13"
dependencies = ["symbolicai"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
symbolicai = { git = "https://github.com/ExtensityAI/symbolicai.git", branch = "dev" }
